--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>AccioCode AngularJS Tutorial</title>
+	<title>AngularJS Tutorial</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
